# NeuronVeil-Digit-Detector

./: package-lock.json  package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  main.rs
src/lib/: Paint.svelte
